--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,22 @@ cache:
 
 script: "./gradlew clean build"
 
+before_deploy:
+  - zip -r project-spring * # 현재 위치의 모든 파일을 해당이름으로 압축
+  - mkdir -p deploy #deploy 디렉토리 생성.
+  - mv project-spring.zip deploy/project-spring.zip #파일을 deploy 디렉토리 아래로 이동
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: project-aws-spring-build # S3 버킷
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private # zip 파일 접근을 private으로
+    local_dir: deploy # deploy하기 전에 미리 생성한 디렉토리를 저장
+    wait-until-deployed: true
+
 # CI 실행 완료시 메일로 알람
 notifications:
   email:
