--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,17 @@ deploy:
     local_dir: deploy # deploy하기 전에 미리 생성한 디렉토리를 저장
     wait-until-deployed: true
 
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: project-aws-spring-build # S3 버킷
+    key: project-spring.zip # 빌드 파일을 압축해서 전달
+    bundle_type: zip
+    application: project-spring # 웹 콘솔에서 등록한 CodeDeploy 어플리케이션
+    deployment_group: project-spring-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
+    region: ap-northeast-2
+    wait-until-deployed: true
+
 # CI 실행 완료시 메일로 알람
 notifications:
   email:
