--- a/appspec.yml
+++ b/appspec.yml
@@ -1,6 +1,6 @@
-version: 0.0 #codedeploy 버전. 프로젝트 버전이 아니면 0.0 외의 버전을 사용시 에러가 발생
+version: 0.0 # CodeDeploy 버전을 명시한다.
 os: linux
 files:
-  - source:   / #codedeploy에서 전달해 준 파일중 destination으로 이동시킬 대상 지정
-    destination: /home/ec2-user/app/step2/zip/ #source에서 지정된 파일을 받을 위치. jar을 실행하는 대상위치가 됨
-    overwrite: yes #기존 파일에 대한 덮어쓰기 설정.
+  - source:  / # 전체 파일을 나타낸다.
+    destination: /home/ec2-user/app/step2/zip/ # source로 지정된 전체 파일이 받을 위치이다.
+    overwrite: yes # 기존 파일들이 있으면 덮어 쓸지를 결정한다
